--- a/product-slider/product-slider/product-slider.css
+++ b/product-slider/product-slider/product-slider.css
@@ -40,6 +40,7 @@
   display: flex;
   overflow-x: auto;
   scroll-behavior: smooth;
+  overflow: hidden;
 }
 
 .product-container::-webkit-scrollbar {
@@ -126,6 +127,8 @@
 .price {
   font-weight: 900;
   font-size: 20px;
+  display: flex;
+  align-items: center;
 }
 
 .actual-price {
