--- a/product and cart/product-slider/product-slider.css
+++ b/product and cart/product-slider/product-slider.css
@@ -52,6 +52,9 @@
   width: 250px;
   height: 450px;
   margin-right: 40px;
+  display: inline-block;
+  /* align-items: flex-start;
+  justify-content: flex-start; */
 }
 
 .product-image {
